# agent

./: .gitignore  .rules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LEARN-PRODUCT.md  LEARN-TECHNICAL.md  LEARN.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: audit.yml  ci.yml  ebpf-smoke.yml  release.yml
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: lib.rs  main.rs  preflight.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs  logging.rs
crates/collector/: Cargo.toml
crates/collector/src/: lib.rs
crates/collector/tests/: engine_loop.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ebpf/: Cargo.toml  rust-toolchain.toml
crates/ebpf/src/: main.rs  vmlinux.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: contributing-architecture.md  contributing-building.md  contributing-ci.md  contributing-development-process.md  contributing-testing.md  support-matrix.md
docs/adr/: 0000-template.md  0001-ring-buffer-over-perf-buffer.md  0002-co-re-btf-over-compile-per-kernel.md  0003-stable-root-nightly-ebpf-toolchain-split.md  0004-single-self-contained-binary.md  0005-event-abi-two-encodings.md  0006-cold-start-and-resync-contract.md  0007-open-core-one-way-dependency.md  0008-gpu-telemetry-hybrid-collector.md  README.md
