[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
edition      = "2024"
license      = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
# --- internal crates: the headless engine + the frontends ---
agent-core      = { path = "crates/core",      version = "0.1.0" }
agent-collector = { path = "crates/collector", version = "0.1.0" }
agent-ui        = { path = "crates/ui",        version = "0.1.0" }
agent-cli       = { path = "crates/cli",        version = "0.1.0" }

# --- runtime / CLI / errors ---
anyhow = { version = "1", default-features = false, features = ["std"] }
clap   = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
# Error model for the library crates (.rules): typed, #[non_exhaustive] errors.
thiserror = "2"

# --- the chosen stack, wired per milestone (see ROADMAP.md / ARCHITECTURE.md). Declared here so the
#     decisions live in one place; a crate opts in with `dep.workspace = true` when its milestone lands.
# GPU source (M1): NVML via dlopen — needs no NVIDIA library at build time.
nvml-wrapper = "0.10"
# GUI frontend (M1+): egui on wgpu.
eframe = "0.29"
egui   = "0.29"
# TUI frontend (ratatui) is declared when M3 lands.

# House lints (each crate opts in with `[lints] workspace = true`). The no-panic discipline:
# unwrap/expect/panic are denied in non-test code; clippy.toml re-allows them in tests.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

# Release: small, fast. panic stays "unwind" so a panicking task is isolated, not an abort.
[profile.release]
lto           = "thin"
codegen-units = 1
