[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
edition      = "2024"
license      = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
# --- internal crates: the headless engine + the frontends ---
agent-core      = { path = "crates/core",      version = "0.1.0" }
agent-collector = { path = "crates/collector", version = "0.1.0" }
agent-ui        = { path = "crates/ui",        version = "0.1.0" }
agent-cli       = { path = "crates/cli",        version = "0.1.0" }

# --- runtime / CLI / errors ---
anyhow = { version = "1.0.103", default-features = false, features = ["std"] }
clap   = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
# Error model for the library crates (.rules): typed, #[non_exhaustive] errors.
thiserror = "2"
# Lock-free snapshot publication (engine → surfaces), §0.5 R1.
arc-swap = "1"
# Wire contract: serde DTOs in `core`; `serde_json` encodes `ps --json` (§0.5 R6).
serde      = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# Property-based testing (dev-only): ring-buffer invariants (.rules testing ladder).
proptest = "1"

# --- the chosen stack, wired per milestone (see ROADMAP.md / ARCHITECTURE.md). Declared here so the
#     decisions live in one place; a crate opts in with `dep.workspace = true` when its milestone lands.
# GPU source (M1): NVML via dlopen — needs no NVIDIA library at build time.
nvml-wrapper = "0.10"
# GUI frontend (M1+): egui on wgpu. egui_plot is a separate crate (versions locked in step with egui).
eframe    = "0.29"
egui      = "0.29"
egui_plot = "0.29"
# TUI frontend (ratatui) is declared when M3 lands.

# House lints (each crate opts in with `[lints] workspace = true`). The no-panic discipline:
# unwrap/expect/panic are denied in non-test code; clippy.toml re-allows them in tests.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

# Release: small, fast. panic stays "unwind" so a panicking task is isolated, not an abort.
[profile.release]
lto           = "thin"
codegen-units = 1
