[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
edition      = "2024"
license      = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
# --- internal crates: the engine + the adapters + the frontend ---
agent-core      = { path = "crates/core",      version = "0.1.0" }
agent-models    = { path = "crates/models",    version = "0.1.0" }
agent-providers = { path = "crates/providers", version = "0.1.0" }
agent-cli       = { path = "crates/cli",       version = "0.1.0" }

# --- runtime / CLI / errors ---
anyhow = { version = "1.0.103", default-features = false, features = ["std"] }
clap   = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
# Error model for the library crates (.rules): typed, #[non_exhaustive] errors.
thiserror = "2"
# The canonical schema + the `ask --json` wire contract.
serde      = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# Property-based testing (dev-only): the engine's compute invariants.
proptest = "1"

# --- async substrate ---
# The two seams (Model + DataProvider) are async because every real adapter is network I/O. tokio is the
# runtime; async-trait makes the async methods object-safe so the engine can hold `Box<dyn Model>` and
# select adapters at runtime (12-factor backing services). Features stay minimal until reqwest lands.
tokio       = { version = "1", default-features = false }
async-trait = "0.1"

# --- 12-factor config + logging ---
# Layered config (flags > env > file > defaults): `toml` parses the file layer; `serde` maps it.
# `tracing` is the logging facade (events from the engine); `tracing-subscriber` renders them to stderr,
# filtered by config, so stdout stays reserved for the answer / `--json`.
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Real HTTP adapters add `reqwest` here when they land (Claude/Polygon); the mock adapters need no network,
# so the workspace stays dependency-light until then.

# House lints (each crate opts in with `[lints] workspace = true`). The no-panic discipline:
# unwrap/expect/panic are denied in non-test code; clippy.toml re-allows them in tests.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

[workspace.lints.rust]
# Every public item carries a doc comment — enforced, not just convention (CI's `-D warnings` makes this
# an error). Rustdoc's broken/redundant intra-doc-link lints are gated by the `docs` CI step + xtask.
missing_docs = "warn"

# Release: small, fast. panic stays "unwind" so a panicking task is isolated, not an abort.
[profile.release]
lto           = "thin"
codegen-units = 1
