[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Userspace binary: loads the embedded eBPF object, attaches programs, and (from M1) drains the
# ring buffer, enriches, evaluates rules, and exports. The eBPF object is compiled under nightly
# and embedded by build.rs (see the workspace toolchain split).
[dependencies]
agent-common                 = { workspace = true, features = ["pod"] }
aya.workspace                = true
bytemuck.workspace           = true
tokio.workspace              = true
anyhow.workspace             = true
clap.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true

[build-dependencies]
anyhow.workspace = true

[lints]
workspace = true
