[package]
name    = "gpumon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "gpumon"
path = "src/main.rs"

[dependencies]
gpumon-core.workspace      = true
gpumon-collector.workspace = true
gpumon-ui.workspace        = true
gpumon-cli.workspace       = true
anyhow.workspace           = true
clap.workspace             = true

[lints]
workspace = true
