[package]
name    = "agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-core.workspace      = true
agent-collector.workspace = true
agent-ui.workspace        = true
agent-cli.workspace       = true
anyhow.workspace           = true
clap.workspace             = true

[lints]
workspace = true
