[package]
name    = "agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
serde.workspace       = true
thiserror.workspace   = true

[dev-dependencies]
proptest.workspace = true
# A runtime to drive the async seams in `#[tokio::test]`.
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
