[package]
name    = "agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
futures.workspace     = true
serde.workspace       = true
# Tool-call inputs/outputs are JSON (the shape every real LLM provider uses); serde_json carries them.
serde_json.workspace  = true
thiserror.workspace   = true
# Logging facade — the engine emits `debug!` events; the app configures where they go.
tracing.workspace     = true

[dev-dependencies]
proptest.workspace = true
# A runtime to drive the async seams in `#[tokio::test]`.
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
