[package]
name = "agent-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# Kernel-side eBPF programs (no_std, compiled to the BPF target). Built under the nightly
# toolchain pinned in ./rust-toolchain.toml; embedded into the `agent` binary by its build.rs.
[dependencies]
aya-ebpf.workspace = true

[[bin]]
name = "agent-ebpf"
path = "src/main.rs"

[lints]
workspace = true
