[package]
name    = "agent-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-core.workspace  = true
async-trait.workspace = true

[dev-dependencies]
# A runtime to drive the async `Model` methods in `#[tokio::test]`.
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
