[package]
name    = "agent-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-core.workspace  = true
async-trait.workspace = true
# The final answer streams as word-sized deltas (`Step::Done`).
futures.workspace     = true
# The `query` tool call carries JSON input/output.
serde_json.workspace  = true

[dev-dependencies]
# A runtime to drive the async `Model` methods in `#[tokio::test]`.
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
