[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# Build orchestration (the cargo-xtask pattern). `cargo xtask <cmd>` is the canonical entrypoint;
# the actual eBPF cross-compile lives in crates/agent/build.rs, so xtask stays thin.
[dependencies]
anyhow.workspace = true
clap.workspace   = true

[lints]
workspace = true
